@@ -192,8 +192,11 @@ sub extract_atom
     };
 
     if ( defined $atom_type &&
-         $atom_type =~ m/^([A-Za-z]{1,2})/ ) {
+         $atom_type =~ m/^([A-Za-z]{1,2})(?:(\d+)([+-]))?/ ) {
         $atom_type = ucfirst( lc( $1 ) );
+        if( defined $2 ) {
+            $atom_info{oxidation} = int( $3 . $2 );
+        }
     };
 
     if ( !( exists $atom_properties->{$atom_type} ||
