@@ -1,0 +1,328 @@
+$VAR1 = [
+          {
+            '_atom_site_symmetry_multiplicity' => '2',
+            '_atom_site_type_symbol' => 'K1+',
+            'assembly' => '.',
+            'atom_site_occupancy' => '1.',
+            'atom_site_type_symbol' => 'K1+',
+            'attached_hydrogens' => '0',
+            'calc_flag' => 'd',
+            'cell_label' => 'K1',
+            'chemical_type' => 'K',
+            'coordinates_fract' => [
+                                     '0.',
+                                     '0.',
+                                     '0.'
+                                   ],
+            'coordinates_ortho' => [
+                                     0,
+                                     0,
+                                     0
+                                   ],
+            'f2o' => [
+                       [
+                         '5.947',
+                         '-2.9735',
+                         '5.12820847142954e-16'
+                       ],
+                       [
+                         0,
+                         '5.15025307630606',
+                         '8.88231762432109e-16'
+                       ],
+                       [
+                         0,
+                         0,
+                         '8.375'
+                       ]
+                     ],
+            'group' => '.',
+            'index' => 0,
+            'multiplicity' => '2',
+            'name' => 'K1',
+            'oxidation' => 1,
+            'site_label' => 'K1',
+            'symop' => [
+                         [
+                           1,
+                           0,
+                           0,
+                           0
+                         ],
+                         [
+                           0,
+                           1,
+                           0,
+                           0
+                         ],
+                         [
+                           0,
+                           0,
+                           1,
+                           0
+                         ],
+                         [
+                           0,
+                           0,
+                           0,
+                           1
+                         ]
+                       ],
+            'symop_id' => 1,
+            'translation' => [
+                               0,
+                               0,
+                               0
+                             ],
+            'translation_id' => '555',
+            'unity_matrix_applied' => 1
+          },
+          {
+            '_atom_site_symmetry_multiplicity' => '2',
+            '_atom_site_type_symbol' => 'K1+',
+            'assembly' => '.',
+            'atom_site_occupancy' => '1.',
+            'atom_site_type_symbol' => 'K1+',
+            'attached_hydrogens' => '0',
+            'calc_flag' => 'd',
+            'cell_label' => 'K2',
+            'chemical_type' => 'K',
+            'coordinates_fract' => [
+                                     '0.6667',
+                                     '0.3333',
+                                     '0.25'
+                                   ],
+            'coordinates_ortho' => [
+                                     '2.97379735',
+                                     '1.71657935033281',
+                                     '2.09375'
+                                   ],
+            'f2o' => $VAR1->[0]{'f2o'},
+            'group' => '.',
+            'index' => 1,
+            'multiplicity' => '2',
+            'name' => 'K2',
+            'oxidation' => 1,
+            'site_label' => 'K2',
+            'symop' => [
+                         [
+                           1,
+                           0,
+                           0,
+                           0
+                         ],
+                         [
+                           0,
+                           1,
+                           0,
+                           0
+                         ],
+                         [
+                           0,
+                           0,
+                           1,
+                           0
+                         ],
+                         [
+                           0,
+                           0,
+                           0,
+                           1
+                         ]
+                       ],
+            'symop_id' => 1,
+            'translation' => [
+                               0,
+                               0,
+                               0
+                             ],
+            'translation_id' => '555',
+            'unity_matrix_applied' => 1
+          },
+          {
+            '_atom_site_symmetry_multiplicity' => '2',
+            '_atom_site_type_symbol' => 'S6+',
+            'assembly' => '.',
+            'atom_site_occupancy' => '1.',
+            'atom_site_type_symbol' => 'S6+',
+            'attached_hydrogens' => '0',
+            'calc_flag' => 'd',
+            'cell_label' => 'S1',
+            'chemical_type' => 'S',
+            'coordinates_fract' => [
+                                     '0.3333',
+                                     '0.6667',
+                                     '0.25'
+                                   ],
+            'coordinates_ortho' => [
+                                     '-0.000297349999998847',
+                                     '3.43367372597325',
+                                     '2.09375'
+                                   ],
+            'f2o' => $VAR1->[0]{'f2o'},
+            'group' => '.',
+            'index' => 2,
+            'multiplicity' => '2',
+            'name' => 'S1',
+            'oxidation' => 6,
+            'site_label' => 'S1',
+            'symop' => [
+                         [
+                           1,
+                           0,
+                           0,
+                           0
+                         ],
+                         [
+                           0,
+                           1,
+                           0,
+                           0
+                         ],
+                         [
+                           0,
+                           0,
+                           1,
+                           0
+                         ],
+                         [
+                           0,
+                           0,
+                           0,
+                           1
+                         ]
+                       ],
+            'symop_id' => 1,
+            'translation' => [
+                               0,
+                               0,
+                               0
+                             ],
+            'translation_id' => '555',
+            'unity_matrix_applied' => 1
+          },
+          {
+            '_atom_site_symmetry_multiplicity' => '4',
+            '_atom_site_type_symbol' => 'O2-',
+            'assembly' => '.',
+            'atom_site_occupancy' => '1.',
+            'atom_site_type_symbol' => 'O2-',
+            'attached_hydrogens' => '0',
+            'calc_flag' => 'd',
+            'cell_label' => 'O1',
+            'chemical_type' => 'O',
+            'coordinates_fract' => [
+                                     '0.3333',
+                                     '0.6667',
+                                     '0.410'
+                                   ],
+            'coordinates_ortho' => [
+                                     '-0.000297349999998765',
+                                     '3.43367372597325',
+                                     '3.43375'
+                                   ],
+            'f2o' => $VAR1->[0]{'f2o'},
+            'group' => '.',
+            'index' => 3,
+            'multiplicity' => '4',
+            'name' => 'O1',
+            'oxidation' => -2,
+            'site_label' => 'O1',
+            'symop' => [
+                         [
+                           1,
+                           0,
+                           0,
+                           0
+                         ],
+                         [
+                           0,
+                           1,
+                           0,
+                           0
+                         ],
+                         [
+                           0,
+                           0,
+                           1,
+                           0
+                         ],
+                         [
+                           0,
+                           0,
+                           0,
+                           1
+                         ]
+                       ],
+            'symop_id' => 1,
+            'translation' => [
+                               0,
+                               0,
+                               0
+                             ],
+            'translation_id' => '555',
+            'unity_matrix_applied' => 1
+          },
+          {
+            '_atom_site_symmetry_multiplicity' => '12',
+            '_atom_site_type_symbol' => 'O2-',
+            'assembly' => '.',
+            'atom_site_occupancy' => '0.333',
+            'atom_site_type_symbol' => 'O2-',
+            'attached_hydrogens' => '0',
+            'calc_flag' => 'd',
+            'cell_label' => 'O2',
+            'chemical_type' => 'O',
+            'coordinates_fract' => [
+                                     '0.212',
+                                     '-0.212',
+                                     '0.188'
+                                   ],
+            'coordinates_ortho' => [
+                                     '1.891146',
+                                     '-1.09185365217688',
+                                     '1.5745'
+                                   ],
+            'f2o' => $VAR1->[0]{'f2o'},
+            'group' => '.',
+            'index' => 4,
+            'multiplicity' => '12',
+            'name' => 'O2',
+            'oxidation' => -2,
+            'site_label' => 'O2',
+            'symop' => [
+                         [
+                           1,
+                           0,
+                           0,
+                           0
+                         ],
+                         [
+                           0,
+                           1,
+                           0,
+                           0
+                         ],
+                         [
+                           0,
+                           0,
+                           1,
+                           0
+                         ],
+                         [
+                           0,
+                           0,
+                           0,
+                           1
+                         ]
+                       ],
+            'symop_id' => 1,
+            'translation' => [
+                               0,
+                               0,
+                               0
+                             ],
+            'translation_id' => '555',
+            'unity_matrix_applied' => 1
+          }
+        ];
