@@ -3,6 +3,8 @@ cod-tools (unreleased)
   * Added:
     - COD::AtomNeighbours:
       - the neighbour_list_from_cif() subroutine.
+    - COD::CIF::Data::AtomList:
+      - determining atom oxidation states.
 
 cod-tools (3.0.1)
 
